Cherry-pick r272185. rdar://problem/74032429

REGRESSION (iOS 14.2): Can't play html audio with muted attribute
    https://bugs.webkit.org/show_bug.cgi?id=219295
    <rdar://problem/71863148>

    Reviewed by Eric Carlson.

    In r266844, we added a power-saving feature that would disable the audio decoder for initially
    muted media elements. However, this caused an issue for .mp3 files, where the duration of the
    track is computed by the decoder, and not the parser. Since the goal of the power-saving feature
    was to reduce the CPU cost for decoding a muted audio track on a <video> element, partially
    revert this change by making it apply only to <video> elements and not <audio> ones.

    * platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
    (WebCore::MediaPlayerPrivateAVFoundationObjC::createAVPlayer):

    Canonical link: https://commits.webkit.org/233561@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272185 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/232923.150@safari-611-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-611-branch@272519 268f45cc-cd09-0410-ab3c-d52691b4dbfc